# flagfall2.0

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
GUI/: main.py  theme.json
arduino_comms/: arduino_comms.ino  communication.hpp  opcode.h
arduino_main/: arduino_main.ino  communication.hpp
arduino_main/lib/: README  communication.hpp
master-program/: Cargo.toml
master-program/src/: main.rs
opponent-wrapper/: .gitignore  Cargo.toml  README.md
opponent-wrapper/src/: cliargs.rs  engine.rs  gametype.rs  lichess.rs  main.rs  user.rs
serial-communicator/: Cargo.toml  bindings.h  build.rs  out
serial-communicator/.cargo/: config.toml
serial-communicator/src/: bindings.rs  lib.rs  main.rs
serial-communicator/src/util/: mod.rs  serial_helper.rs
serial-communicator/tests/: local_test.rs
src/: main.rs
