[package]
name = "master-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cozy-chess = "0.3.1"
log = "0.4.17"
shakmaty = "0.23.0"
env_logger = "0.10.0"
anyhow = "1.0.69"

tokio = { version = "1.26", features = ["full"] }