[package]
name = "serial-communicator"
version = "0.2.0"
authors = ["Zhengyi Chen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26", features = ["full"] }
tokio-serial = "5.4"

serialport = "4.2" 
log = "0.4.17"
simple_logger = { version = "4.1", features = ["stderr"] }
itertools = "0.10" 

[build-dependencies]
bindgen = "0.64"
cc = "1.0"